--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
+certifi==2024.12.14
+charset-normalizer==3.4.1
 datetime==5.5
 et-xmlfile==2.0.0
 faker==30.8.2
-numpy==2.1.2
+idna==3.10
+numpy==2.2.1
 openpyxl==3.1.5
 pandas==2.2.3
+phonenumbers==8.13.52
+pyodbc==5.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 setuptools==75.3.0
-six==1.16.0
+six==1.17.0
 typing-extensions==4.12.2
 tzdata==2024.2
+urllib3==2.3.0
 zope-interface==7.1.1
